tests/ui/borrowck/borrowck-move-out-from-array-no-overlap-match.stderr
error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:17:11
   |
LL |         [_, _, _x] => {}
   |                -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [_, _, ref _x] => {}
   |                +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:28:11
   |
LL |         [_, _, (_x, _)] => {}
   |                 -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..].0` has type `String`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [_, _, (ref _x, _)] => {}
   |                 +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:41:11
   |
LL |         [_x, _, _] => {}
   |          -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [ref _x, _, _] => {}
   |          +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:52:11
   |
LL |         [.., _x] => {}
   |              -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [.., ref _x] => {}
   |              +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:63:11
   |
LL |         [(_x, _), _, _] => {}
   |           -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..].0` has type `String`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [(ref _x, _), _, _] => {}
   |           +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:74:11
   |
LL |         [.., (_x, _)] => {}
   |               -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..].0` has type `String`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [.., (ref _x, _)] => {}
   |               +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:85:11
   |
LL |         [_, _y @ ..] => {}
   |             -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [_, ref _y @ ..] => {}
   |             +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:96:11
   |
LL |         [_y @ .., _] => {}
   |          -- value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [ref _y @ .., _] => {}
   |          +++

error[E0382]: use of partially moved value: `a`
  --> $DIR/borrowck-move-out-from-array-no-overlap-match.rs:109:11
   |
LL |         [x @ .., _, _] => {}
   |          - value partially moved here
LL |     }
LL |     match a {
   |           ^ value used here after partial move
   |
   = note: partial move occurs because `a[..]` has type `(String, String)`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         [ref x @ .., _, _] => {}
   |          +++

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0382`.
